--- a/projects/space-app/src/index.html
+++ b/projects/space-app/src/index.html
@@ -6,8 +6,20 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <style>
+    .app-loader {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+    }
+  </style>
 </head>
 <body>
-  <app-root></app-root>
+  <app-root>
+    <div class="app-loader">
+    <p>Trwa ładowanie...</p>
+  </div>
+</app-root>
 </body>
 </html>
