--- a/projects/space-app/src/index.html
+++ b/projects/space-app/src/index.html
@@ -14,6 +14,8 @@
       height: 100vh;
     }
   </style>
+  <link rel="manifest" href="manifest.webmanifest">
+  <meta name="theme-color" content="#1976d2">
 </head>
 <body>
   <app-root>
@@ -21,5 +23,6 @@
     <p>Trwa ładowanie...</p>
   </div>
 </app-root>
+  <noscript>Please enable JavaScript to continue using this application.</noscript>
 </body>
 </html>
